--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.41.5",
+    "react-pro-sidebar": "^1.0.0-alpha.9",
     "typescript": "4.9.4"
   },
   "devDependencies": {
