--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest --env=jsdom --verbose"
   },
   "dependencies": {
     "@next/font": "13.1.1",
@@ -17,6 +18,7 @@
     "clsx": "^1.2.1",
     "eslint": "8.31.0",
     "eslint-config-next": "13.1.1",
+    "jest": "^29.3.1",
     "next": "13.1.1",
     "react": "18.2.0",
     "react-dnd": "^16.0.1",
@@ -29,6 +31,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
+    "jest-environment-jsdom": "^29.3.1",
     "postcss": "^8.4.20",
     "tailwindcss": "^3.2.4"
   }
